--- a/pages/index.css
+++ b/pages/index.css
@@ -1,41 +1,41 @@
-@import url('../vendor/normalize.css');
-@import url('../fonts/fonts.css');
+@import url('vendor/normalize.css');
+@import url('fonts/fonts.css');
 
-@import url('../source/root/root.css');
-@import url('../source/container/container.css');
-@import url('../source/header/__container/header__container.css');
+@import url('source/root/root.css');
+@import url('source/container/container.css');
+@import url('source/header/__container/header__container.css');
 
 
-@import url('../source/header/header.css');
-@import url('../source/header/__search/header__search.css');
+@import url('source/header/header.css');
+@import url('source/header/__search/header__search.css');
+ 
+@import url('source/logo/__img/logo__img.css');
 
-@import url('../source/logo/__img/logo__img.css');
+@import url('source/search/search.css');
+@import url('source/search/__button/search__button.css');
+@import url('source/search/__icon/search__icon.css');
+@import url('source/search/__input/search__input.css');
 
-@import url('../source/search/search.css');
-@import url('../source/search/__button/search__button.css');
-@import url('../source/search/__icon/search__icon.css');
-@import url('../source/search/__input/search__input.css');
+@import url('source/notifier/notifier.css');
+@import url('source/notifier/_hidden/notifier_hidden.css');
 
-@import url('../source/notifier/notifier.css');
-@import url('../source/notifier/_hidden/notifier_hidden.css');
+@import url('source/separator/separator.css');
+@import url('source/horizontal-separator/horizontal-separator.css');
+@import url('source/header/__horizontal-separator/header__horizontal-separator.css');
 
-@import url('../source/separator/separator.css');
-@import url('../source/horizontal-separator/horizontal-separator.css');
-@import url('../source/header/__horizontal-separator/header__horizontal-separator.css');
+@import url('source/profile-button/profile-button.css');
+@import url('source/header/__profile-button/header__profile-button.css');
+@import url('source/profile-button/__name/profile-button__name.css');
+@import url('source/profile-button/__photo/profile-button__photo.css');
+@import url('source/profile-button/__icon/profile-button__icon.css');
 
-@import url('../source/profile-button/profile-button.css');
-@import url('../source/header/__profile-button/header__profile-button.css');
-@import url('../source/profile-button/__name/profile-button__name.css');
-@import url('../source/profile-button/__photo/profile-button__photo.css');
-@import url('../source/profile-button/__icon/profile-button__icon.css');
+@import url('source/content/content.css');
 
-@import url('../source/content/content.css');
+@import url('source/partners/partners.css');
+@import url('source/partners/__grid/partners__grid.css');
 
-@import url('../source/partners/partners.css');
-@import url('../source/partners/__grid/partners__grid.css');
+@import url('source/section-title/section-title.css');
+@import url('source/partners/__section-title/partners__section-title.css');
 
-@import url('../source/section-title/section-title.css');
-@import url('../source/partners/__section-title/partners__section-title.css');
-
-@import url('../source/partner/partner.css');
-@import url('../source/partner/__logo/partner__logo.css');
+@import url('source/partner/partner.css');
+@import url('source/partner/__logo/partner__logo.css');
